- MNs hash added to ping/pong report.
- MNs hash added to slots list.
- MNs count added to ping/pong report.
- MNs count added to slot list.
- NetworkMNsHash consensus calculated.
- NetworkMNsCount consensus calculated.
- Fixed Pending request only when CriptoThreadRunning is false.
- Slots grid updated each second instead each cycle.
- Increased node max peers to 55.
- Master nodes data includedd in NodeStatus.
- Implemented double tracking system to pool pays.
- Masternodes info show on data panel.
- Masternodes download at connect.
- Implemented update from repo.
- Pool miner stats updates each second.
- MNs array cleared after block construction.
- History command improved.

Version 0.2.1La5

- Official release

Version 0.2.1La4

- Added filter so nodes will not try to auto connect.
- ActualizarseConLaRed() adjusted.
- Master nodes subdomains filter.
- Implemented MyMNsHash and MyMNsCount.
- Seed node 23.94.21.83 added.
- GetOrderDetails limited to last 4000 blocks.
- Performance measurement to master nodes functions.
- Node report verification moved into specifical thread.
- Added MNs hash to node status.
- Improved MNs hash generation.

Version 0.2.1La3

- Official release

Version 0.2.1La2

- ASCII verificator for node reports.
- Removed references to deprecated nodes file.
- Fixed peer verification filter to allow nosomobile and nosolite.
- Added "localhost" filter no node reports.
- Added filters to nodeverified function.
- OrderID sent as result of Function PTC_Order. (lite/mobile compatibility)
- Fixed compatibility between lite/mobile and nosowallet.
- Miner hashrate added to poolstatus.
- Current block difficult added to poolstatus.
- Nodes unban changed to every 6 hours.
- Pool keeps restart file updated to save block steps.

Version 0.2.1La1

- Official release

Version 0.2.1Kb4

- QRcode for export keys.
- Thread for masternodes processing.
- Exception block on verify signed string.
- Exception block added on signing function.